界面端:     重新设计了图标     修改了主界面的布局
hook端:
    通过比例完成相对坐标的计算
    用小写来对进程, 类名等判断

--- a/自动点击界面端/自动点击界面端.vcxproj.filters
+++ b/自动点击界面端/自动点击界面端.vcxproj.filters
@@ -56,7 +56,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\自动点击界面端.ico">
+    <Image Include="res\ico.ico">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
